add responsive contact

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,3 +18,26 @@
     color: orange;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
    }
+   .contact{
+    color: red;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+   }
+   input ,select ,textarea{
+    margin-top: 2%;
+    background-color: aqua !important;
+    border: 2px solid black !important ;
+   }
+   #but{
+    margin-top: 2%;
+    width: 50%;
+    background-color: black;
+    margin-left: 25%;
+   }
+
+   #but:hover{
+    margin-top: 2%;
+    width: 50%;
+    background-color:  goldenrod;
+    margin-left: 25%;
+    border: 2px black solid;
+   }
